--- a/EmergentSoftwareProject/EmergentSoftwareProject.csproj
+++ b/EmergentSoftwareProject/EmergentSoftwareProject.csproj
@@ -99,6 +99,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\EmergentSoftwareCore\EmergentSoftwareCore\EmergentSoftwareCore.csproj">
+      <Project>{fb4d246c-2d7d-4f11-83a5-547b3fb7cea8}</Project>
+      <Name>EmergentSoftwareCore</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
